--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Nombre de la página-->
-    <title><%# title %> | Berenjena frustrada</title>
+    <title><%= title %> | Berenjena frustrada</title>
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/76d25d6fff.js" crossorigin="anonymous"></script>
@@ -24,5 +24,5 @@
     <link rel="stylesheet" href="/css/style.css">
 
     <!-- Icono -->
-    <link rel="shortcut icon" href="/images/0001.png">
+    <link rel="shortcut icon" href="/images/products/0001.png">
 </head>
