--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <!-- Icono y titulo -->
     <div class="titulo">
         <a href="/">
-            <img src="/images/0001.png" alt="" class="logo">
+            <img src="/images/products/0001.png" alt="" class="logo">
             <h1> La Berenjena frustrada</h1>
         </a>
     </div>
